force-app/main/default/objects/Product2/fields/Annual_Recurring_Product__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Recurring Product</label>
    <type>Checkbox</type>
</CustomField>