force-app/main/default/objects/Product2/fields/AOD_Instructions__c.field-meta.xml
<CustomField>
    <fullName>AOD_Instructions__c</fullName>
    <description>Instructions for Ask-our-docs instance related to this product</description>
    <label>AOD Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>