force-app/main/default/objects/Product2/fields/AOD_Respository__c.field-meta.xml
<CustomField>
    <fullName>AOD_Respository__c</fullName>
    <label>AOD Repository</label>
    <length>255</length>
    <type>Text</type>
</CustomField>