force-app/main/default/objects/Product2/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <inlineHelpText>Barcode used to identify this product</inlineHelpText>
    <label>Barcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>