force-app/main/default/objects/Product2/fields/Batch_managed__c.field-meta.xml
<CustomField>
    <fullName>Batch_managed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch managed</label>
    <type>Checkbox</type>
</CustomField>