force-app/main/default/objects/Product2/fields/Business_Unit2__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit2__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>A&amp;A</fullName>
            </value>
            <value>
                <fullName>BMK</fullName>
            </value>
            <value>
                <fullName>CCR</fullName>
            </value>
            <value>
                <fullName>Niche</fullName>
            </value>
            <value>
                <fullName>Point of Care</fullName>
            </value>
            <value>
                <fullName>Clinical Mass Spec</fullName>
                <label>CMS</label>
            </value>
            <value>
                <fullName>SDG</fullName>
            </value>
            <value>
                <fullName>Biomarkers</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>RDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>