force-app/main/default/objects/Product2/fields/CRI__c.field-meta.xml
<CustomField>
    <fullName>CRI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Replaceable Item</description>
    <inlineHelpText>Customer Replaceable Item - this product can replaced by a customer (consumable item)</inlineHelpText>
    <label>CRI</label>
    <type>Checkbox</type>
</CustomField>