force-app/main/default/objects/Product2/fields/Download_to_mobile__c.field-meta.xml
<CustomField>
    <fullName>Download_to_mobile__c</fullName>
    <description>Formula field based on user&apos;s division</description>
    <formula>If($User.Department= TEXT(Family),true,If($User.CDD_IDD_User__c &amp;&amp; (TEXT(Family)=&apos;IDD&apos; || TEXT(Family)=&apos;CDD&apos;) ,true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Download to mobile</label>
    <type>Checkbox</type>
</CustomField>