force-app/main/default/objects/Product2/fields/EAN_UPC_GTIN__c.field-meta.xml
<CustomField>
    <fullName>EAN_UPC_GTIN__c</fullName>
    <description>MBD EAN/UPC/GTIN field mapped to same in SAP.</description>
    <label>EAN/UPC/GTIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>