force-app/main/default/objects/Product2/fields/ERP_Source__c.field-meta.xml
<CustomField>
    <fullName>ERP_Source__c</fullName>
    <defaultValue>IF($User.FirstName = &apos;Informatica&apos;, &apos;SAP&apos;,&apos;&apos;)</defaultValue>
    <label>ERP Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>