force-app/main/default/objects/Product2/fields/Factory_support__c.field-meta.xml
<CustomField>
    <fullName>Factory_support__c</fullName>
    <description>Use this URL for factory support on this product</description>
    <label>Factory support</label>
    <type>Url</type>
</CustomField>