force-app/main/default/objects/Product2/fields/First_Time_Fix_All_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Fix_All_Time__c</fullName>
    <label>Issue Resolved (All Time)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>