force-app/main/default/objects/Product2/fields/First_Time_Fix_Last_180_Days__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Fix_Last_180_Days__c</fullName>
    <label>Issue Resolved (Last 180 Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>