force-app/main/default/objects/Product2/fields/Fixed_First_Time_All_Time__c.field-meta.xml
<CustomField>
    <fullName>Fixed_First_Time_All_Time__c</fullName>
    <label>Single Visit (All Time)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>