force-app/main/default/objects/Product2/fields/Fixed_First_Time_L90D__c.field-meta.xml
<CustomField>
    <fullName>Fixed_First_Time_L90D__c</fullName>
    <label>Single Visit (L90D)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>