force-app/main/default/objects/Product2/fields/Flow_type__c.field-meta.xml
<CustomField>
    <fullName>Flow_type__c</fullName>
    <label>Flow type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>