force-app/main/default/objects/Product2/fields/Has_Spare_Parts__c.field-meta.xml
<CustomField>
    <fullName>Has_Spare_Parts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to filter if an Instrument will have spare parts that are replaceable</description>
    <label>Has Spare Parts</label>
    <type>Checkbox</type>
</CustomField>