force-app/main/default/objects/Product2/fields/KPI_Tracking__c.field-meta.xml
<CustomField>
    <fullName>KPI_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KPI Tracking</label>
    <type>Checkbox</type>
</CustomField>