force-app/main/default/objects/Product2/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <description>[CDD NA Pilot] Product id from legacy system.</description>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>