force-app/main/default/objects/Product2/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>[HMD] Picklist field used specifically for Asset-related products.</description>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABAXIS</fullName>
            </value>
            <value>
                <fullName>ABBOTT</fullName>
            </value>
            <value>
                <fullName>ABX</fullName>
            </value>
            <value>
                <fullName>Accelerate Diagnostics</fullName>
            </value>
            <value>
                <fullName>ADVANCED INSTRUMENTS</fullName>
            </value>
            <value>
                <fullName>ALERE</fullName>
            </value>
            <value>
                <fullName>ALERE ALFA WASSERMAN</fullName>
            </value>
            <value>
                <fullName>APPLIED BIOSYSTEMS</fullName>
            </value>
            <value>
                <fullName>Arkray</fullName>
            </value>
            <value>
                <fullName>BAYER</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>BECKMAN COULTER</fullName>
            </value>
            <value>
                <fullName>BELAIR</fullName>
            </value>
            <value>
                <fullName>BIOCARE</fullName>
            </value>
            <value>
                <fullName>BioFire</fullName>
            </value>
            <value>
                <fullName>BIOGENIX</fullName>
            </value>
            <value>
                <fullName>Biomatrica</fullName>
            </value>
            <value>
                <fullName>BIOMEDICA</fullName>
            </value>
            <value>
                <fullName>Biomedical Polymers</fullName>
            </value>
            <value>
                <fullName>BIOMERIEUX</fullName>
            </value>
            <value>
                <fullName>BIORAD</fullName>
            </value>
            <value>
                <fullName>BioSearch Technologies</fullName>
            </value>
            <value>
                <fullName>Biotix</fullName>
            </value>
            <value>
                <fullName>BMX</fullName>
            </value>
            <value>
                <fullName>BRADY</fullName>
            </value>
            <value>
                <fullName>CAROLINA LCC</fullName>
            </value>
            <value>
                <fullName>CEPHEID</fullName>
            </value>
            <value>
                <fullName>Cooper Surgical</fullName>
            </value>
            <value>
                <fullName>DADE</fullName>
            </value>
            <value>
                <fullName>DAKO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>