force-app/main/default/objects/Product2/fields/Metric_Status__c.field-meta.xml
<CustomField>
    <fullName>Metric_Status__c</fullName>
    <label>Metric Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>