force-app/main/default/objects/Product2/fields/Metrics_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Last_Updated__c</fullName>
    <label>Metrics Last Updated</label>
    <type>DateTime</type>
</CustomField>