force-app/main/default/objects/Product2/fields/MTBF_Days_All_Time__c.field-meta.xml
<CustomField>
    <fullName>MTBF_Days_All_Time__c</fullName>
    <label>MTBF (Days) (All Time)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>