force-app/main/default/objects/Product2/fields/MTBF_Days_L90D__c.field-meta.xml
<CustomField>
    <fullName>MTBF_Days_L90D__c</fullName>
    <label>MTBF (Days) (L90D)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>