force-app/main/default/objects/Product2/fields/MTTR_Hours_All_Time__c.field-meta.xml
<CustomField>
    <fullName>MTTR_Hours_All_Time__c</fullName>
    <label>MTTR (Hours) (All Time)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>