force-app/main/default/objects/Product2/fields/MTTR_Hours_L180D__c.field-meta.xml
<CustomField>
    <fullName>MTTR_Hours_L180D__c</fullName>
    <label>MTTR (Hours) (L180D)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>