force-app/main/default/objects/Product2/fields/Old_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Material_Number__c</fullName>
    <description>The Old Product Number for Products migrated from other systems to SAP.</description>
    <label>Old Material Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>