force-app/main/default/objects/Product2/fields/Orderable__c.field-meta.xml
<CustomField>
    <fullName>Orderable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to specify if a product can be ordered</description>
    <inlineHelpText>Used to specify if a product can be ordered</inlineHelpText>
    <label>Orderable</label>
    <type>Checkbox</type>
</CustomField>