force-app/main/default/objects/Product2/fields/Pack_Type__c.field-meta.xml
<CustomField>
    <fullName>Pack_Type__c</fullName>
    <description>For MBD, OFM will get the data from SAP for this field.</description>
    <label>Pack Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>