force-app/main/default/objects/Product2/fields/PM_On_Time__c.field-meta.xml
<CustomField>
    <fullName>PM_On_Time__c</fullName>
    <label>PM On Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>