force-app/main/default/objects/Product2/fields/Prod_Level_2_Hierarchy_and_Prod_Desc__c.field-meta.xml
<CustomField>
    <fullName>Prod_Level_2_Hierarchy_and_Prod_Desc__c</fullName>
    <label>Prod Level 2 Hierarchy and Prod Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>