force-app/main/default/objects/Product2/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <description>[CDD NA Pilot] The class of the product.</description>
    <label>Product Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6-AM</fullName>
            </value>
            <value>
                <fullName>Abbott MCC</fullName>
            </value>
            <value>
                <fullName>Abbott Specific</fullName>
            </value>
            <value>
                <fullName>Ab Indy &amp; Ag Indy-FG</fullName>
            </value>
            <value>
                <fullName>AB-PINACA</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Acetaminophen</fullName>
            </value>
            <value>
                <fullName>Adsorb Out™</fullName>
            </value>
            <value>
                <fullName>AFP</fullName>
            </value>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Allele Specific Trays</fullName>
            </value>
            <value>
                <fullName>AllSet+ Gold High-Resolution</fullName>
            </value>
            <value>
                <fullName>AllSet+ Gold Low-Resolution</fullName>
            </value>
            <value>
                <fullName>AllType Ancillary Reagents</fullName>
            </value>
            <value>
                <fullName>AllType NGS</fullName>
            </value>
            <value>
                <fullName>Amikacin</fullName>
            </value>
            <value>
                <fullName>Amph/Ecstasy</fullName>
            </value>
            <value>
                <fullName>Amphetamine</fullName>
            </value>
            <value>
                <fullName>AMX Custom Clinical</fullName>
            </value>
            <value>
                <fullName>Ancillary Product</fullName>
            </value>
            <value>
                <fullName>Ancillary Products</fullName>
            </value>
            <value>
                <fullName>anti-Tg</fullName>
                <label>Anti-TG</label>
            </value>
            <value>
                <fullName>anti-TPO</fullName>
                <label>Anti-TPO</label>
            </value>
            <value>
                <fullName>AQUAKEM Consumables</fullName>
            </value>
            <value>
                <fullName>AQUAKEM Instruments</fullName>
            </value>
            <value>
                <fullName>AQUAKEM Reagents</fullName>
            </value>
            <value>
                <fullName>AQUAKEM Service &amp;Support</fullName>
            </value>
            <value>
                <fullName>Arbekacin</fullName>
            </value>
            <value>
                <fullName>Arena/Aquakem Spare Part</fullName>
            </value>
            <value>
                <fullName>Arena C&amp;C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>