force-app/main/default/objects/Product2/fields/Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail__c</fullName>
    <formula>SVMX_ERP_Product_ID__c &amp;&quot; ¦ &quot;&amp;
Name &amp;&quot; ¦ &quot;
&amp;IF(SVMXC__Enable_Serialized_Tracking__c=TRUE,&quot;S&quot;,&quot;NS&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>S = Serialised Product NS = Non Serialised Product</inlineHelpText>
    <label>Product Detail</label>
    <type>Text</type>
</CustomField>