force-app/main/default/objects/Product2/fields/Product_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Product_Dimension__c</fullName>
    <description>MARA-GROES info from SAP</description>
    <label>Product Dimension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>