force-app/main/default/objects/Product2/fields/Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy__c</fullName>
    <formula>TEXT(Product_Hierarchy_Lvl_2__c)+&apos;  &apos;+ TEXT(Product_Hierrarchy_Lvl_3__c)+&apos; &apos;+ TEXT(Product_Hierarchy_Lvl_4__c) +&apos;  &apos;+  TEXT(Product_Hierarchy_Lvl_5__c)</formula>
    <label>Product Hierarchy</label>
    <type>Text</type>
</CustomField>