force-app/main/default/objects/Product2/fields/Product_Hierarchy_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy_Level_1__c</fullName>
    <description>MBD Product Hierarchy Level 1 field. Could have more values for other divisions.</description>
    <label>Product Hierarchy Lvl 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MBD</fullName>
            </value>
            <value>
                <fullName>IDD</fullName>
            </value>
            <value>
                <fullName>CDD</fullName>
            </value>
            <value>
                <fullName>TDX</fullName>
            </value>
            <value>
                <fullName>110100</fullName>
            </value>
            <value>
                <fullName>690100</fullName>
            </value>
            <value>
                <fullName>110200</fullName>
            </value>
            <value>
                <fullName>0000111200</fullName>
            </value>
            <value>
                <fullName>9000000451</fullName>
            </value>
            <value>
                <fullName>9000000548</fullName>
            </value>
            <value>
                <fullName>0000146904</fullName>
            </value>
            <value>
                <fullName>9000000407</fullName>
            </value>
            <value>
                <fullName>0000146704</fullName>
            </value>
            <value>
                <fullName>0000120100</fullName>
            </value>
            <value>
                <fullName>9000000258</fullName>
            </value>
            <value>
                <fullName>9000000469</fullName>
            </value>
            <value>
                <fullName>0000111400</fullName>
            </value>
            <value>
                <fullName>0000110100</fullName>
            </value>
            <value>
                <fullName>9000000285</fullName>
            </value>
            <value>
                <fullName>0000141104</fullName>
            </value>
            <value>
                <fullName>531900</fullName>
            </value>
            <value>
                <fullName>531999</fullName>
            </value>
            <value>
                <fullName>0000537800</fullName>
            </value>
            <value>
                <fullName>0000531900</fullName>
            </value>
            <value>
                <fullName>PDX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>