force-app/main/default/objects/Product2/fields/Product_Hierarchy_Lvl_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy_Lvl_2__c</fullName>
    <label>Product Hierarchy Lvl 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>AST</fullName>
            </value>
            <value>
                <fullName>Autoimmune</fullName>
            </value>
            <value>
                <fullName>Blood Culture</fullName>
            </value>
            <value>
                <fullName>CDD Cascadion</fullName>
            </value>
            <value>
                <fullName>Culture Media</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Instruments-Competitor</fullName>
            </value>
            <value>
                <fullName>Molecular Detection</fullName>
            </value>
            <value>
                <fullName>Niche</fullName>
            </value>
            <value>
                <fullName>Other products</fullName>
            </value>
            <value>
                <fullName>PDXCore</fullName>
            </value>
            <value>
                <fullName>PDXExent</fullName>
            </value>
            <value>
                <fullName>Pre-Analytical Supplies</fullName>
            </value>
            <value>
                <fullName>Quality Control</fullName>
            </value>
            <value>
                <fullName>Rapid Tests</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>TDX OLI</fullName>
            </value>
            <value>
                <fullName>TDX SSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>