force-app/main/default/objects/Product2/fields/Product_Hierarchy_Lvl_4__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy_Lvl_4__c</fullName>
    <label>Product Hierarchy Lvl 4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allergen tests</fullName>
            </value>
            <value>
                <fullName>AMX Custom Clinical</fullName>
            </value>
            <value>
                <fullName>Astar Consumable</fullName>
            </value>
            <value>
                <fullName>Astar Equipment</fullName>
            </value>
            <value>
                <fullName>BAX consumables</fullName>
            </value>
            <value>
                <fullName>BAX Equipment</fullName>
            </value>
            <value>
                <fullName>Biochemical Confirmatory Tests</fullName>
            </value>
            <value>
                <fullName>Biochemical ID Panels</fullName>
            </value>
            <value>
                <fullName>Blood Culture Equipment</fullName>
            </value>
            <value>
                <fullName>Blood Culture Systems</fullName>
            </value>
            <value>
                <fullName>Bottles</fullName>
            </value>
            <value>
                <fullName>CART</fullName>
            </value>
            <value>
                <fullName>Cartridges</fullName>
            </value>
            <value>
                <fullName>CDD Cascadion Accessories</fullName>
            </value>
            <value>
                <fullName>CDD Cascadion Consumables</fullName>
            </value>
            <value>
                <fullName>CDD Cascadion Instruments</fullName>
            </value>
            <value>
                <fullName>CDD Cascadion Reagents</fullName>
            </value>
            <value>
                <fullName>CDD Cascadion spare parts</fullName>
            </value>
            <value>
                <fullName>Collection and Transport</fullName>
            </value>
            <value>
                <fullName>Complement</fullName>
            </value>
            <value>
                <fullName>Convenience formats</fullName>
            </value>
            <value>
                <fullName>Core Instrument Capital</fullName>
            </value>
            <value>
                <fullName>Core Instrument Consumables</fullName>
            </value>
            <value>
                <fullName>Core Instrument Maintenance</fullName>
            </value>
            <value>
                <fullName>Culti-Loops</fullName>
            </value>
            <value>
                <fullName>Custom Consumables</fullName>
            </value>
            <value>
                <fullName>Dehydrated Culture Media</fullName>
            </value>
            <value>
                <fullName>Dynal Consumables [FT2]</fullName>
            </value>
            <value>
                <fullName>Dynal Equipment [FT2]</fullName>
            </value>
            <value>
                <fullName>Elisa Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>