force-app/main/default/objects/Product2/fields/Product_Hierarchy_Lvl_5__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy_Lvl_5__c</fullName>
    <label>Product Hierarchy Lvl 5</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>55 mm Contact Plates</fullName>
            </value>
            <value>
                <fullName>55 mm Plates</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Acrion Analyzer</fullName>
            </value>
            <value>
                <fullName>Acrion STT and Gateway</fullName>
            </value>
            <value>
                <fullName>Admin Fees</fullName>
            </value>
            <value>
                <fullName>AGS Jars/Boxes</fullName>
            </value>
            <value>
                <fullName>AGS Kits</fullName>
            </value>
            <value>
                <fullName>Air Sampler</fullName>
            </value>
            <value>
                <fullName>Antibodies</fullName>
            </value>
            <value>
                <fullName>APAS Instruments</fullName>
            </value>
            <value>
                <fullName>Astar Discs</fullName>
            </value>
            <value>
                <fullName>Astar Frozen Inserts</fullName>
            </value>
            <value>
                <fullName>Astar Instrument</fullName>
            </value>
            <value>
                <fullName>Bacterial Antigen</fullName>
            </value>
            <value>
                <fullName>Bactidisc</fullName>
            </value>
            <value>
                <fullName>BactiSwab</fullName>
            </value>
            <value>
                <fullName>BAX Accessories</fullName>
            </value>
            <value>
                <fullName>BAX Assays</fullName>
            </value>
            <value>
                <fullName>BAX Instruments</fullName>
            </value>
            <value>
                <fullName>Bax parts</fullName>
            </value>
            <value>
                <fullName>BAX service</fullName>
            </value>
            <value>
                <fullName>Binax Flu</fullName>
            </value>
            <value>
                <fullName>Binax RSV</fullName>
            </value>
            <value>
                <fullName>Biochemical Reagents</fullName>
            </value>
            <value>
                <fullName>Bio-Threat Assays</fullName>
            </value>
            <value>
                <fullName>Bi-plates</fullName>
            </value>
            <value>
                <fullName>Blood/Serum</fullName>
            </value>
            <value>
                <fullName>Blood and Serum Tests</fullName>
            </value>
            <value>
                <fullName>Blood Culture Consumables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>